# jack_mixer

./: .clang-format  .flake8  .gitignore  AUTHORS  CHANGELOG.md  CHANGES  GNUmakefile  INSTALL  INSTALL.md  MANIFEST.in  Makefile.am  NEWS  README  README.md  _jack_mixer.pxd  _jack_mixer.pyx  abspeak.py  acinclude.m4  autogen.sh  bootstrap  channel.py  configure.ac  gui.py  jack_compat.h  jack_mix_box.c  jack_mixer.c  jack_mixer.glade  jack_mixer.gladep  jack_mixer.h  jack_mixer.py  jack_mixer.schemas  jack_mixer_c.c  jackmixer.service  list.h  log.c  log.h  memory_atomic.c  memory_atomic.h  meson.build  meson_options.txt  (+16 more)
data/: Makefile.am  client_templates.xml  jack_mixer.desktop  meson.build
data/art/: Makefile.am
data/locale/: jack_mixer-de.po  jack_mixer-es.po  jack_mixer-fr.po  jack_mixer.pot  meson.build
docs/: CONTRIBUTING.md  jack_mix_box.1.rst.in  jack_mixer.1.rst.in  meson.build  meson_dist_rst2man.py
jack_mixer/: __main__.py  abspeak.py  app.py  channel.py  gui.py  indicator.py  meson.build  meter.py  nsmclient.py  preferences.py  scale.py  serialization.py  serialization_xml.py  slider.py  styling.py
m4/: jack.m4  python.m4  swig.m4
src/: _jack_mixer.pxd  _jack_mixer.pyx  jack_mix_box.c  jack_mixer.c  jack_mixer.h  list.h  log.c  log.h  meson.build  meson_dist_cython.py  scale.c  scale.h
tests/: test.py
tools/: compile-messages.py  extract-messages.sh  jack_mixer.sh  merge-messages.py
