[build-system]
build-backend = "mesonpy"
requires = [
    "cython",
    "wheel",
    "meson-python",
    "ninja",
    "docutils",
]


[project]
name = "jack_mixer"
dynamic = ['version']
description = "A GTK+ JACK audio mixer application"
readme = "README.md"
authors = [
    { name="Nedko Arnaudov", email="nedko (a.t) arnaudov (dot) name" },
]
maintainers = [
    { name="Christopher Arndt", email="info (a.t.) chrisarndt.de" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
]
keywords = [
    "mixer",
    "audio",
    "music",
    "jack",
    "gtk",
]
requires-python = ">=3.8"
dependencies = [
    "platformdirs",
    "PyGObject",
    "pycairo",
]

[project.license]
file = "COPYING"


[project.urls]
"Homepage" = "https://rdio.space/jackmixer/"
"Source" = "https://github.com/jack-mixer/jack-mixer"
"Bug Tracker" = "https://github.com/jack-mixer/jack-mixer/issues"


[project.scripts]
"jack_mixer" = "jack_mixer.app:main"


[tool.meson-python.args]
setup = [
    "-Dwheel=true",
    "-Dbuildtype=release",
    "-Dcheck-py-modules=false",
]


[tool.isort]
line_length = 99
profile = "black"
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true


[tool.black]
line-length = 99
target-version = [
    "py38",
    "py39",
    "py310",
    "py311",
    "py312",
]
force-exclude = 'jack_mixer/nsmclient\.py'
